<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/jbmart"
    tools:context=".Sellers.SellerRegistrationActivity">




    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:radius="20dp"
        android:background="@drawable/custom_edittext"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtView_seller_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:text="@string/seller_registration_form"
                android:textAlignment="center"
                android:textColor="@color/lavender"
                android:textSize="25sp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/seller_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:drawableStart="@drawable/baseline_drive_file_name_outline_24"
                android:padding="10dp"
                android:background="@drawable/custom_edittext"
                android:maxLines="1"
                android:hint="@string/seller_name"
                android:textStyle="bold"
                android:layout_below="@id/txtView_seller_register"
                />

            <EditText
                android:id="@+id/seller_phone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/seller_name"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:maxLines="1"
                android:drawableStart="@drawable/baseline_phone_24"
                android:padding="10dp"
                android:background="@drawable/custom_edittext"
                android:inputType="number"
                android:hint="@string/phone_number"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/seller_mail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/seller_phone"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_email_24"
                android:padding="10dp"
                android:layout_marginRight="10dp"
                android:maxLines="1"
                android:hint="@string/e_mail"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/seller_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/seller_mail"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_lock_24"
                android:padding="10dp"
                android:layout_marginRight="10dp"
                android:maxLines="1"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/seller_address"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/seller_password"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/baseline_business_24"
                android:padding="10dp"
                android:background="@drawable/custom_edittext"
                android:layout_marginRight="10dp"
                android:maxLines="1"
                android:hint="@string/shop_buisness_address"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/seller_register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/seller_address"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:padding="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/seller_have_account"
                android:layout_marginTop="14dp"
                android:textSize="18sp"
                android:onClick="SellerLogin"
                android:layout_below="@id/seller_register_btn"
                android:textColor="@color/lavender"
                android:text="@string/already_have_an_account"
                android:gravity="center"
                android:layout_marginBottom="14dp"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>
