<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/jbmart"
    tools:context=".forgot_verify">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="OTP Verify"
                android:id="@+id/otpverify"
                android:textSize="36dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/purple"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="Enter the OTP sent to"
                android:textSize="14dp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                />

            <TextView

                android:id="@+id/textMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="50dp"
                android:gravity="center"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/inputcode1"
                    android:layout_width="40dp"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:background="@drawable/verify_box_view"                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:layout_marginLeft="2dp"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:ignore="LabelFor"/>

                <EditText
                    android:id="@+id/inputcode2"
                    android:layout_width="40dp"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:background="@drawable/verify_box_view"                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:layout_marginLeft="2dp"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:ignore="LabelFor"/>

                <EditText
                    android:id="@+id/inputcode3"
                    android:layout_width="40dp"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:background="@drawable/verify_box_view"                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:layout_marginLeft="2dp"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:ignore="LabelFor"/>

                <EditText
                    android:id="@+id/inputcode4"
                    android:layout_width="40dp"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:background="@drawable/verify_box_view"                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:layout_marginLeft="2dp"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:ignore="LabelFor"/>

                <EditText
                    android:id="@+id/inputcode5"
                    android:layout_width="40dp"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:background="@drawable/verify_box_view"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:layout_marginLeft="2dp"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:ignore="LabelFor"/>

                <EditText
                    android:id="@+id/inputcode6"
                    android:layout_width="40dp"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:background="@drawable/verify_box_view"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:layout_marginLeft="2dp"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:ignore="LabelFor"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/didn_t_receive_the_otp"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/textResendOTP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/resend_otp"
                    android:textColor="@color/lavender"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/verify_otp"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/purple"
                    android:text="@string/verify_otp"
                    android:textSize="25dp"
                    app:cornerRadius="20dp" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:visibility="gone"/>

            </FrameLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>